fix image path, adjust vertical spacing, add mixin

--- a/scss/util/_mixin.scss
+++ b/scss/util/_mixin.scss
@@ -7,6 +7,7 @@
   3.2 — Self
 4 - Grid
 5 - Vertical spacing
+6 - Clear decoration
 /// END TABLE OF CONTENTS **/
 
 /** 1 - Breakpoint
@@ -17,6 +18,28 @@
     // Prints a media query based on the value
     @media (min-width: map-get($breakpoints, $breakpoint)) {
       @content;
+    }
+  }
+
+  // If the key doesn't exist in the map
+  @else {
+    @warn "Unfortunately, no value could be retrieved from `#{$breakpoint}`. "
+          + "Available breakpoints are: #{map-keys($breakpoints)}.";
+  }
+}
+
+@mixin only-breakpoint($breakpoint) {
+  // If the key exists in the map
+  @if map-has-key($breakpoints, $breakpoint) {
+    // between tablet and desktop breakpoint
+    @if ($breakpoint == tablet) {
+      @media (min-width: map-get($breakpoints, tablet)) and (max-width: map-get($breakpoints, desktop) - 1px) {
+        @content;
+      }
+    } @else {
+      @media (min-width: map-get($breakpoints, $breakpoint)) {
+        @content;
+      }
     }
   }
 
@@ -99,8 +122,8 @@
       $diff: map-get($design-dev-vertical-space-diff, $breakpoint);
 
       @if ($dir == auto) {
-        @if $breakpoint != small {
-          @include breakpoint($breakpoint) {
+        @if $breakpoint != mobile {
+          @include only-breakpoint($breakpoint) {
             #{$type}-top: $value - $diff;
             #{$type}-bottom: $value - $diff;
           }
@@ -109,8 +132,8 @@
           #{$type}-bottom: $value - $diff;
         }
       } @else {
-        @if $breakpoint != small {
-          @include breakpoint($breakpoint) {
+        @if $breakpoint != mobile {
+          @include only-breakpoint($breakpoint) {
             #{$type}-#{$dir}: $value - $diff;
           }
         } @else {
@@ -118,5 +141,12 @@
         }
       }
     }
+  }
+}
+
+@mixin clear-decoration() {
+  & {
+    background: none;
+    text-decoration: none;
   }
 }
